--- a/src/index.css
+++ b/src/index.css
@@ -19,18 +19,15 @@
   --color-primary-green-variant: #7a9a95;
   --color-primary-orange: #fa8b60;
   --color-primary-orange-variant: #ef6d3b;
-  --color-primary-bule: rgb(8, 24, 58);
   --color-white: #fff;
   --color-light: rgba(255, 255, 255, 0.6);
   --color-black:rgb(25, 28, 30);
   --color-primary-red: rgb(246, 66, 72);
+  --color-primary-bule: rgb(51, 40, 124);
+
 
 
   --transition: all 400ms ease;
-
-  --container-width-lg: 75%
-  --container-width-md: 86%
-  --container-width-sm: 90%
 }
 
 html {
@@ -46,12 +43,12 @@ body {
   background-color: var(--color-primary);
   color: var(--color-black);
   line-height: 2.0;
-  background: repeat-y center/60% url(../src/assets/Jullien.jpg);
+  background: url(../src/assets/Jullien.jpg);
 }
 
 /* =========================== GENEARL STYLES ============================ */
 .container {
-  width: 90%;
+  width: 100%;
   height: 100%;
   margin: 0 auto;
 }
@@ -100,7 +97,6 @@ a:hover {
   width: max-content;
   display: inline-block;
   color: var(--color-primary-red);
-  padding: 0.5rem 1.0rem;
   border-radius: 0.4rem;
   cursor: pointer;
   transition: var(--transition);
