--- a/src/component/Header/Header.css
+++ b/src/component/Header/Header.css
@@ -1,15 +1,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Beau+Rivage&family=Dancing+Script&family=Lobster&family=Noto+Sans+JP:wght@100&display=swap');
 
 header {
-    height: 65px;
     overflow: hidden;
     background-color: var(--color-primary-bule);
     color: var(--color-primary-red);
+    text-align: center;
   }
   
   .header_container {
+    height: 65px;
     width: 100%;
-    height: 100%;
     position: relative;
     display: flex;
   }
@@ -26,7 +26,6 @@ header {
     position: relative;
     font-size: 1.4rem;
     font-family: 'Lobster', cursive;
-    text-align: center;
     width:70%;
   }
 
@@ -54,5 +53,22 @@ header {
     transform: scale(1.2) ;
   }
 
+/* ==================== MEDIA QUERIRES (MEDIUM DEICES) ===================== */
+@media screen and (max-width: 1024px) {
+ 
+}
 
+/* ==================== MEDIA QUERIRES (SMALL DEICES) ===================== */
+@media screen and (max-width: 600px) {
+  header {
+    height: 10vh;
+  }
+  .back-button,
+  .logOut_div {
+    display: none;
+  }
+  .title {
+    width: 100%;
+  }
+}
   
