--- a/src/component/Chat/Chat.css
+++ b/src/component/Chat/Chat.css
@@ -18,7 +18,7 @@
     display: grid;
     padding: 10px;
     background: var(--color-light);
-    height: 30rem;
+    height: 32rem;
     backdrop-filter: blur(15px);
     overflow-y: scroll;
     display: flex;
@@ -32,24 +32,43 @@
     font-family: 'Josefin Sans', sans-serif;
     font-size: 1rem;
     height: 8%;
+    margin-bottom: 1rem;
   }
 
-.chat_body{
-    height: 80%;
+.chatroom_body{
+    height: 92%;
 }
 
 form>input {
   height: 3rem;
   font-family: 'Roboto Mono', monospace;
   width:80%;
+  /* Green */
+  background: var(--color-light);
+  backdrop-filter: blur(15px);
+  color: var(--color-black);
+  outline: none;
+  border: none;
 }
 
 form>button {
   height: 3rem;
   font-family: 'Dosis', sans-serif;
   background: var(--color-primary-red);
+  width:20%;
+  /* Green */
+  border: none;
+  color: white;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  cursor: pointer;
+}
+
+button:disabled {
+  opacity: 0.8;
+  cursor: not-allowed;
   color: var(--color-black);
-    width:20%;
 }
 
 /* ==================== MEDIA QUERIRES (MEDIUM DEICES) ===================== */
