--- a/src/component/Message/Message.css
+++ b/src/component/Message/Message.css
@@ -1,4 +1,35 @@
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300&display=swap');
+
 .message {
     display: flex;
     align-items: center;
+    margin-bottom: 0.65rem 0;
+    font-family: 'Josefin Sans',sans-serif;
+}
+
+.sent {
+    flex-direction: row-reverse;
+}
+
+.sent p {
+    color: white;
+    background: #0b93f6;
+    align-self: flex-end;
+    margin: 0.5rem 0.5rem;
+    padding: 0px 10px;
+}
+
+.received p {
+    background: #e5e5ea;
+    color: black;
+    align-self: flex-end;
+    margin: 0.5rem 0.5rem;
+    padding: 0px 10px;
+}
+
+img {
+    width: 2.2rem;
+    height: 2.2rem;
+    border-radius: 50%;
+    margin: 2px 1px 2px 5px;
 }
