--- a/src/component/Message/Message.css
+++ b/src/component/Message/Message.css
@@ -4,7 +4,7 @@
     display: flex;
     align-items: center;
     margin-bottom: 0.65rem 0;
-    font-family: 'Josefin Sans',sans-serif;
+    font-family: 'Josefin Sans', serif;
 }
 
 .sent {
