--- a/src/component/SignIn/SignIn.css
+++ b/src/component/SignIn/SignIn.css
@@ -8,7 +8,7 @@
 }
 
 .signIn_container > div {
-    margin-top: 5rem;
+    margin-top: 8.5rem;
     background: var(--color-primary) ;
     width: 22rem;
     position: absolute;
@@ -63,8 +63,8 @@
   @media screen and (max-width: 1024px) {
     .signIn_container >div{
       margin: 0 auto;
-      margin-top: 15rem;
-      width:30rem;
+      margin-top: 8.5rem;
+      width:22rem;
     }
 
     .signIn_icon {
@@ -81,6 +81,6 @@
       width:20rem;
     }
     .signIn_icon {
-      margin-left: rem;
+      margin-left: 9rem;
     }
   }
