--- a/src/component/SignIn/SignIn.css
+++ b/src/component/SignIn/SignIn.css
@@ -8,45 +8,43 @@
 }
 
 .signIn_container > div {
-    margin-top: 8.5rem;
-    background: var(--color-primary) ;
-    width: 22rem;
+    margin-top: 5rem;
+    background: var(--color-light);
+    width: 30rem;
     position: absolute;
-    height: 16.5rem;
+    height: 18rem;
     left: 50%;
     transform: translateX(-50%);
     border-radius: 4rem;
-    backdrop-filter: invert(70%);
-    backdrop-filter: opacity(20%);
-    border: 0.6rem solid var(--color-primary-bule);
+    border: 1px solid transparent;
   }
 
   .signIn_body{
+    display: grid;
+    grid-template-columns: 3fr;
     text-align: center;
     color: var(--color-primary-bule);
     font-family: 'Ubuntu', sans-serif;
     font-size: 1.2rem;
-    font-weight: 1000;
-    height: 8%;
   }
+
   .signIn_text{
-    margin-top: 2rem;
-    display: block;
+    margin-top: 2.4rem;
+    display: block;                                                                                                                                                                                                                                                                                                                                                                                                                           
   }
+
   .signIn_icon{
     margin-top: 1rem;
-    margin-left: 9.5rem;
     margin-bottom: 1rem;
+    font-size: 20px;
     transform: rotate(0.5turn);
-    display: block;
-    animation: 3s ease-in 1s 2 reverse both paused slidein;
   }
   
   .signIn_button{
     background: var(--color-primary-red);
     color: var(--color-white);
     margin: 0 auto;
-    margin-bottom: 2rem;
+    margin-bottom: 2.1rem;
     height:3.5rem;
     width:13rem;
     text-align: center;
@@ -64,14 +62,9 @@
     .signIn_container >div{
       margin: 0 auto;
       margin-top: 8.5rem;
-      width:22rem;
-    }
-
-    .signIn_icon {
-      margin-left: 13.5rem;     
-    }
-  
-  }
+      width: 22rem;
+      }
+}
   
   /* ==================== MEDIA QUERIRES (SMALL DEICES) ===================== */
   @media screen and (max-width: 600px) {
@@ -79,8 +72,5 @@
       margin: 0 auto;
       margin-top: 9rem;
       width:20rem;
-    }
-    .signIn_icon {
-      margin-left: 9rem;
     }
   }
